Fix:news item selections too small Improve:change news images to lazy loading Test:fix header animation delay (?)

--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -76,40 +76,42 @@ header nav ul li a::after {
 	position: absolute;
 	top: 1.1em;
 	pointer-events: none;
-	height: 100%;
 	width: 0;
+	height: 0;
 	transition: .2s;
 }
 
 header nav ul li a:hover::after {
 	width: 90px;
+	height: 100%;
 	display: block;
+	opacity: 1.;
 	background-size: contain;
 	background-repeat: no-repeat;
 	background-position: center top;
 }
 
-#hd-about:hover::after {
+#hd-about::after {
 	background-image: url(../images/about.png);
 }
 
-#hd-news:hover::after {
+#hd-news::after {
 	background-image: url(../images/news.png);
 }
 
-#hd-team:hover::after {
+#hd-team::after {
 	background-image: url(../images/team.png);
 }
 
-#hd-store:hover::after {
+#hd-store::after {
 	background-image: url(../images/store.png);
 }
 
-#hd-sponsor:hover::after {
+#hd-sponsor::after {
 	background-image: url(../images/sponsor.png);
 }
 
-#hd-contact:hover::after {
+#hd-contact::after {
 	background-image: url(../images/contact.png);
 }
 
